# CherryPick

./: .gitignore  CONTRIBUTING.md  README.md  SECURITY.md  agent_client.py  brick.yaml  build.bat  build.sh  capabilities.yaml  collector_server.py  config.yaml  forensic_harvester.py  generate_stubs.sh  pyproject.toml  remote_upload.py  requirements-build.txt  requirements.txt  triager.py
collectors/: __init__.py  active_directory.py  antivirus.py  artifact_collector.py  base.py  boot_uefi.py  browser_chrome.py  browser_edge.py  browser_firefox.py  browser_ie.py  cloud_dropbox.py  cloud_google_drive.py  cloud_onedrive.py  cloud_other.py  collector_registry.py  credentials.py  database_clients.py  dev_tools.py  discord.py  email_other.py  email_outlook.py  email_thunderbird.py  encryption.py  etw_diagnostics.py  eventlogs.py  execution.py  file_listing.py  file_search.py  filesystem.py  gaming.py  hashing.py  iis_web.py  linux.py  logs.py  macos.py  memory.py  network.py  office.py  orchestrator.py  password_managers.py  (+19 more)
sources/: __init__.py  base.py  image.py  live.py  rawdevice.py
tests/: __init__.py  test_file_ops.py  test_registry_consistency.py  test_source_and_bundle.py  test_stub_collectors.py
utils/: __init__.py  bundle.py  capabilities.py  constants.py  contracts.py  file_ops.py  hash_utils.py  manifest.py  ntfs_utils.py  path_utils.py  privilege_utils.py  registry_utils.py  system_info.py  walk.py  zip_utils.py
